# votaciones_congreso_peru

./: .gitignore  AGENTS.md  PLAN_DESCARGA_PDFS.md  README.md  autocodex.yaml  package-lock.json  pyproject.toml
.autocodex/logs/: 20260321T011521Z-d346e731.jsonl
.autocodex/memory/: OPINIONS.md  TODO.md
.beads/: .beads-credential-key  issues.jsonl  metadata.json
.codex/: config.toml
.codex/agents/: agentic_ai_architect.toml  backend_executor.toml  browser_validator.toml  commit_curator.toml  design_strategist.toml  frontend_executor.toml  independent_critic.toml  quality_gate_runner.toml  release_evidence_operator.toml  requirements_clarifier.toml  tracking_operator.toml  workflow_orchestrator.toml
data_extract/: extract.ipynb
docs/: runbook-pleno-cli.md
docs/agents/: autocodex-harness-v2-operating-pack.md
docs/contracts/: autonomy-actions.schema.json  autonomy-tasks.schema.json
docs/plans/: TEMPLATE.md  congreso-votaciones-445-plan.md  congreso-votaciones-445-tasks.json  perform-an-extensive-code-review-20260321T010428Z-d6b4001d-plan.md  perform-an-extensive-code-review-20260321T010428Z-d6b4001d-tasks.json
docs/runbooks/: harness-cli-preflight.md
docs/specs/: TEMPLATE.md  perform-an-extensive-code-review-20260321T010428Z-d6b4001d.md
plans/: 20260320-2038-descarga-masiva-pdfs-pleno.md  20260320-2125-parseo-estructurado-pdfs-pleno.md
tests/: conftest.py  test_candidate_rows.py  test_cli.py  test_download.py  test_extract_services.py  test_fetch.py  test_manifest.py  test_parse_index.py  test_pdf_profile.py  test_section_parser.py  test_services.py
(+40 files in other folders)
